2010-03-17  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (Copying Conditions): import better "free software"
	description from the Emacs manual.

	* doc/texinfo.txi (Info Format Specification): new appendix,
	written by Patrice Dumas and me.

	* doc/texinfo.txi (Include Files): move to near the end of the
	main manual, instead of being an appendix.  These days, include
	files are an important feature.  Remove @refill's.
	(Catching Mistakes): rename chapter name to
	match node name, since it is clearer.

2010-03-09  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (Menu Location): clarify that having the menu
	at the end is a convention, not a requirement.

2010-03-07  Karl Berry  <karl@gnu.org>

	* doc/texinfo.tex (\var): do not call \setupmarkupstyle; it's
	 unused, and the } interferes with the automatic italic correction.

2010-03-02  Karl Berry  <karl@gnu.org>

	* doc/texinfo.tex (\smartitaliccorrection): rename from
	\smartitalicx.  Change calls.
	(\dosmartslant): new macro, avoiding italic correction in \tt.
	(\smartslanted, \smartitalic): use it.
	Report from Mark Polesky, 1 Mar 2010 18:46:44.

2010-02-21  Patrice Dumas  <pertusus@free.fr>

	* po_document/: add translation of strings output in manuals
	in this directory and support files copied for gettext.
	* Makefile.am (SUBDIRS): add texi2html and po_document.
	(dist-local): copy translation into texi2html directories.
	* configure.ac (AM_INIT_AUTOMAKE): add tar-ustar because
	there are long files in tests, and dist-zip because it was
	done in texi2html.
	(MKINSTALLDIRS): add since some gettext version may need it.
	(PERL, USE_UNICODE, USE_EXTERNAL_EASTASIANWIDTH, USE_UNIDECODE,
	USE_DATA_DUMPER, REQUIRE_DATA_DUMPER, t2h_po_dir, t2h_po_top_builddir,
	USE_EXTERNAL_LIBINTL): add texi2html related conditionals.
	* po/Makevars (XGETTEXT_OPTIONS): add perl keywords for texi2html
	source files.
	* po/POTFILES.in: add texi2html files.

2010-02-14  Ben Pfaff  <blp@gnu.org>
